Fixed deprecation and suppressed unchecked.  Removed deprecated finalize().